# nyx

./: .gitignore  Cargo.toml  dockerfile  readme.md
.github/workflows/: nyx-cd.yml  nyx-ci.yml
hooks/: pre-commit
src/: main.rs  setup.rs  types.rs
src/commands/: about.rs  about_user.rs  die.rs  mod.rs  ping.rs  profile_picture.rs  roll_dice.rs  shutdown.rs  usage.rs
src/db/: mongodb.rs  redis.rs
src/utils/: embed_builder_helper.rs  mod.rs  user.rs  user_utils.rs
